[tool.poetry]
name = "calculatorlibrary"
version = "0.1.0"
description = ""
authors = ["horseinthesky <pwnedbyspawn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
ipython = "^7.2"
flake8 = "^3.6"
pytest = "^4.0"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
